--- a/scss/pages/main/_main_media.scss
+++ b/scss/pages/main/_main_media.scss
@@ -234,15 +234,121 @@
     }
 }
 
-
-
-
-
-
-
 @media only screen and (max-width : 767px){
     body{
         min-width: 375px;
     }
-    
+    .container{
+        width: 375px;
+        padding: 0 15px;
+    }
+    .main-header{
+        padding-top: 10px;
+        padding-bottom: 10px;
+        position: relative;
+        &__contacts-and-menu{
+            width: 100%;
+            position: relative;
+        }
+        .contacts{
+            width: 100%;
+            justify-content: space-between;
+            &__languages::after, &__address::after, &__phone::after, &__address,&__socials{
+                display: none;   
+            }
+        }
+        &__menu{
+            display: none;
+        }
+        &__logo{
+            margin-bottom: 0;
+        }
+        &__logo-svg{
+            width: 69px;
+            height: 32px;
+        }
+    }
+    .main-header::before{
+        background: rgba(245, 245, 250, 0.2);
+        @include pseudo;
+        width: 100%;
+        height: 42px;
+        top: 0;
+    }
+    .sandwich{
+        display: block;
+        &__checkbox{
+            display: none;
+        }
+        &__button{
+            @include pseudo;
+            width: 32px;
+            height: 32px;
+            background: url(../../../img/svg/hamburger.svg) no-repeat center center;
+            top: 44px;
+            right: 0;
+            background-color: rgba($separator, 0.4);
+            border-radius: 8px;
+            cursor: pointer;
+        }
+        &__nav{
+            width: 100vw;
+            height: 100vh;
+            position: fixed;
+            background-color: rgba(50, 50, 100, 1);
+            top: 0;
+            left: 0;
+            z-index: 10;
+            padding: 0 8px; 
+            display: none;
+        }
+        &__list{
+            background-color: white;
+            padding: 64px 12px 12px 12px;
+            display: flex;
+            flex-direction: column;
+            border-radius: 12px 12px 0 0;
+            position: absolute;
+            width: calc(100vw - 16px);
+            bottom: 0;
+        }
+        &__item:not(:last-child){   
+            margin-bottom: 15px;
+        }
+        &__link{
+            display: block;
+            @include fonts(24px, 29px, 700, $active-regular, false);
+            text-align: center;
+            padding: 7px 0;
+            background-color: $bg;
+            border-radius: 12px;
+        }
+        &__link:hover{
+            color: $accent;
+        }
+        &__link--active{
+            background-color: $separator;
+        }
+        &__close{
+            position: absolute;
+            width: 32px;
+            height: 32px;
+            border-radius: 8px;
+            top: 13px;right: 13px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        &__close:hover{
+            background-color: $separator;
+            cursor: pointer;
+        }
+        &__close-svg{
+            width: 32px;
+            height: 32px;
+        }
+    }
+    .sandwich__checkbox:checked + .sandwich__nav{
+        display: block;
+    }
 }
