--- a/css/style.css
+++ b/css/style.css
@@ -581,6 +581,10 @@ a:hover {
   background-color: #F0145A;
 }
 
+.sandwich {
+  display: none;
+}
+
 .screen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2293,6 +2297,140 @@ a:hover {
 @media only screen and (max-width: 767px) {
   body {
     min-width: 375px;
+  }
+  .container {
+    width: 375px;
+    padding: 0 15px;
+  }
+  .main-header {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: relative;
+  }
+  .main-header__contacts-and-menu {
+    width: 100%;
+    position: relative;
+  }
+  .main-header .contacts {
+    width: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .main-header .contacts__languages::after, .main-header .contacts__address::after, .main-header .contacts__phone::after, .main-header .contacts__address, .main-header .contacts__socials {
+    display: none;
+  }
+  .main-header__menu {
+    display: none;
+  }
+  .main-header__logo {
+    margin-bottom: 0;
+  }
+  .main-header__logo-svg {
+    width: 69px;
+    height: 32px;
+  }
+  .main-header::before {
+    background: rgba(245, 245, 250, 0.2);
+    display: block;
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 42px;
+    top: 0;
+  }
+  .sandwich {
+    display: block;
+  }
+  .sandwich__checkbox {
+    display: none;
+  }
+  .sandwich__button {
+    display: block;
+    position: absolute;
+    content: '';
+    width: 32px;
+    height: 32px;
+    background: url(../../../img/svg/hamburger.svg) no-repeat center center;
+    top: 44px;
+    right: 0;
+    background-color: rgba(230, 230, 240, 0.4);
+    border-radius: 8px;
+    cursor: pointer;
+  }
+  .sandwich__nav {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    background-color: #323264;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    padding: 0 8px;
+    display: none;
+  }
+  .sandwich__list {
+    background-color: white;
+    padding: 64px 12px 12px 12px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    border-radius: 12px 12px 0 0;
+    position: absolute;
+    width: calc(100vw - 16px);
+    bottom: 0;
+  }
+  .sandwich__item:not(:last-child) {
+    margin-bottom: 15px;
+  }
+  .sandwich__link {
+    display: block;
+    font-size: 24px;
+    color: #24A3FF;
+    font-weight: 700;
+    line-height: 29px;
+    text-align: center;
+    padding: 7px 0;
+    background-color: #F5F5FA;
+    border-radius: 12px;
+  }
+  .sandwich__link:hover {
+    color: #F0145A;
+  }
+  .sandwich__link--active {
+    background-color: #E6E6F0;
+  }
+  .sandwich__close {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    border-radius: 8px;
+    top: 13px;
+    right: 13px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .sandwich__close:hover {
+    background-color: #E6E6F0;
+    cursor: pointer;
+  }
+  .sandwich__close-svg {
+    width: 32px;
+    height: 32px;
+  }
+  .sandwich__checkbox:checked + .sandwich__nav {
+    display: block;
   }
 }
 /*# sourceMappingURL=style.css.map */
