--- a/scss/pages/main/_main_media.scss
+++ b/scss/pages/main/_main_media.scss
@@ -239,13 +239,16 @@
         min-width: 375px;
     }
     .container{
-        width: 375px;
+        width: 345px;
         padding: 0 15px;
     }
     .main-header{
-        padding-top: 10px;
-        padding-bottom: 10px;
+        padding: 10px 0 10px 0;
         position: relative;
+        &__container{
+            padding-left: 0;
+            padding-right: 0;
+        }
         &__contacts-and-menu{
             width: 100%;
             position: relative;
@@ -311,6 +314,7 @@
             position: absolute;
             width: calc(100vw - 16px);
             bottom: 0;
+            transition: all 0.2s ease-in-out 1s;
         }
         &__item:not(:last-child){   
             margin-bottom: 15px;
@@ -350,5 +354,110 @@
     }
     .sandwich__checkbox:checked + .sandwich__nav{
         display: block;
+    }
+    .wrapper{
+        background-size: auto 600px, auto auto;
+        background-position: -37px 0, 0 0;
+    }
+    .screen{
+        min-height: 500px;
+        &__title{
+            width: 100%;
+            margin-top: 131px;
+        }
+    }
+    .preferences{
+        padding-top: 30px;
+        &__link{
+            font-size: 30px;
+            line-height: 36px;
+        }
+        &__description{
+            margin-top: 30px;
+        }
+        &__title{
+            font-size: 20px;
+            line-height: 24px;
+        }
+    }
+    .advantages{
+        .advantage{
+            margin-bottom: 30px;
+            width: 100%;
+        }
+        &__title{
+            font-size: 30px;
+            line-height: 36px;
+            margin-bottom: 30px;
+        }
+    }
+    .slider{
+        .slide{
+            &__quote{
+                font-size: 30px;
+                line-height: 36px; 
+            }
+        }
+    }
+    .companies{
+        &__item{
+            width: 100%;
+        }
+        &__item:nth-child(n+7){
+            display: none;
+        }
+    }
+    .publications{
+        &__title{
+            font-size: 30px;
+            line-height: 36px; 
+        }
+        .publication{
+            width: 100%;
+        }
+    }
+    .main-footer{
+        &__container{
+            flex-direction: column;
+        }
+        .contacts{
+            width: 100%;
+            &__address-and-map{
+                flex-direction: column;
+            }
+            &__address{
+                margin-right: 0;
+                margin-bottom: 10px;
+            }
+            &__address::after{
+                display: none;
+            }
+            &__phone-and-net{
+                flex-direction: column;
+            }
+            &__facebook, &__phone{
+                margin-right: 0;
+            }
+            &__phone{
+                margin-bottom: 10px;
+            }
+            &__phone::before, &__phone::after{
+                display: none;
+            }
+            &__link{
+                height: 38px;
+                margin-bottom: 10px;
+            }
+            &__link-email{
+                margin-bottom: 30px;
+            }
+        }
+        &__copyrights{
+            position: static;
+            width: 100%;
+        }
+        &__copyrights-text{
+            text-align: center;
+        }
     }
 }
