--- a/css/style.css
+++ b/css/style.css
@@ -2185,6 +2185,7 @@ a:hover {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
+    width: calc(100% - 120px);
   }
   .main-header__contacts-and-menu {
     -webkit-box-align: start;
@@ -2203,7 +2204,7 @@ a:hover {
   }
   .wrapper {
     background-size: auto 1024px, auto auto;
-    background-position: -70px 0, 0 0;
+    background-position: center 0, 0 0;
   }
   .screen {
     min-height: 767px;
@@ -2299,7 +2300,7 @@ a:hover {
     min-width: 375px;
   }
   .container {
-    width: 345px;
+    width: 100%;
     padding: 0 15px;
   }
   .main-header {
@@ -2307,8 +2308,8 @@ a:hover {
     position: relative;
   }
   .main-header__container {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 15px;
+    padding-right: 15px;
   }
   .main-header__contacts-and-menu {
     width: 100%;
@@ -2439,14 +2440,14 @@ a:hover {
   }
   .wrapper {
     background-size: auto 600px, auto auto;
-    background-position: -37px 0, 0 0;
+    background-position: center 0, 0 0;
   }
   .screen {
     min-height: 500px;
   }
   .screen__title {
     width: 100%;
-    margin-top: 131px;
+    margin-top: 175px;
   }
   .preferences {
     padding-top: 30px;
@@ -2465,6 +2466,16 @@ a:hover {
   .advantages .advantage {
     margin-bottom: 30px;
     width: 100%;
+  }
+  .advantages .advantage__image-wrap {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .advantages .advantage__title {
+    text-align: center;
+  }
+  .advantages .advantage__text {
+    text-align: center;
   }
   .advantages__title {
     font-size: 30px;
