--- a/scss/pages/main/_main_media.scss
+++ b/scss/pages/main/_main_media.scss
@@ -130,6 +130,7 @@
         &__container{
             flex-direction: column;
             align-items: flex-start;
+            width: calc(100% - 120px);
         }
         &__contacts-and-menu{
             align-items: flex-start;
@@ -147,7 +148,7 @@
     }
     .wrapper{
         background-size: auto 1024px, auto auto;
-        background-position: -70px 0, 0 0;
+        background-position: center 0, 0 0;
     }
     .screen{
         min-height: 767px;
@@ -239,15 +240,15 @@
         min-width: 375px;
     }
     .container{
-        width: 345px;
+        width: 100%;
         padding: 0 15px;
     }
     .main-header{
         padding: 10px 0 10px 0;
         position: relative;
         &__container{
-            padding-left: 0;
-            padding-right: 0;
+            padding-left: 15px;
+            padding-right: 15px;
         }
         &__contacts-and-menu{
             width: 100%;
@@ -357,13 +358,13 @@
     }
     .wrapper{
         background-size: auto 600px, auto auto;
-        background-position: -37px 0, 0 0;
+        background-position: center 0, 0 0;
     }
     .screen{
         min-height: 500px;
         &__title{
             width: 100%;
-            margin-top: 131px;
+            margin-top: 175px;
         }
     }
     .preferences{
@@ -384,6 +385,16 @@
         .advantage{
             margin-bottom: 30px;
             width: 100%;
+            &__image-wrap{
+                margin-left: auto;
+                margin-right: auto;
+            }
+            &__title{
+            text-align: center;
+            }
+            &__text{
+                text-align: center;
+            }
         }
         &__title{
             font-size: 30px;
