--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,3 +33,4 @@
 @import "pages/services-inner/_services-inner_publications";
 @import "pages/services-inner/_services-inner_popup";
 @import "pages/main/_main_media";
+@import "pages/about-us/_about-us_media";
