--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,3 +34,6 @@
 @import "pages/services-inner/_services-inner_popup";
 @import "pages/main/_main_media";
 @import "pages/about-us/_about-us_media";
+@import "pages/team/_team_media";
+@import "pages/team-inner/_team-inner_media";
+@import "pages/contact/_contact_media";
