--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,3 +37,4 @@
 @import "pages/team/_team_media";
 @import "pages/team-inner/_team-inner_media";
 @import "pages/contact/_contact_media";
+@import "pages/publications/_publications_media";
