--- a/css/style.css
+++ b/css/style.css
@@ -2917,4 +2917,10 @@ a:hover {
     padding-bottom: 30px;
   }
 }
+
+@media only screen and (max-width: 1023px) {
+  .publications__item--small-screen:nth-child(3n) {
+    width: 309px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
