--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,3 +38,4 @@
 @import "pages/team-inner/_team-inner_media";
 @import "pages/contact/_contact_media";
 @import "pages/publications/_publications_media";
+@import "pages/publications-inner/_publications-inner_media";
