--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,3 +39,5 @@
 @import "pages/contact/_contact_media";
 @import "pages/publications/_publications_media";
 @import "pages/publications-inner/_publications-inner_media";
+@import "pages/services/_services_media";
+@import "pages/services-inner/_services-inner_media";
