--- a/css/style.css
+++ b/css/style.css
@@ -2964,4 +2964,77 @@ a:hover {
     width: 100%;
   }
 }
+
+@media only screen and (max-width: 1919px) {
+  .wrapper-services {
+    background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+  }
+  .wrapper-services .advantages {
+    padding-top: 0;
+  }
+  .companies--services {
+    padding-bottom: 0;
+  }
+}
+
+@media only screen and (max-width: 1919px) {
+  .service {
+    padding-top: 0;
+  }
+  .service__container {
+    width: 1080px;
+  }
+  .service__list-item {
+    width: 496px;
+  }
+}
+
+@media only screen and (max-width: 1439px) {
+  .service__container {
+    width: 904px;
+  }
+  .service__list-item {
+    width: 408px;
+  }
+  .popup__form .form__title {
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 1023px) {
+  .service__container {
+    width: 648px;
+  }
+  .service__list-item {
+    width: 280px;
+  }
+  .popup__form {
+    width: 75%;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .service__container {
+    width: 315px;
+  }
+  .service__list-item {
+    width: 100%;
+  }
+  .service__title {
+    font-size: 30px;
+    line-height: 36px;
+  }
+  .service__description {
+    padding-bottom: 30px;
+  }
+  .service__list {
+    -webkit-column-count: 1;
+            column-count: 1;
+  }
+  .popup__form {
+    width: 100%;
+    height: 100vh;
+    border-radius: 0px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
