--- a/scss/pages/main/_main_media.scss
+++ b/scss/pages/main/_main_media.scss
@@ -130,7 +130,7 @@
         &__container{
             flex-direction: column;
             align-items: flex-start;
-            width: calc(100% - 120px);
+            width: 648px;
         }
         &__contacts-and-menu{
             align-items: flex-start;
@@ -364,7 +364,7 @@
         min-height: 500px;
         &__title{
             width: 100%;
-            margin-top: 175px;
+            margin-top: 115px;
         }
     }
     .preferences{
