--- a/scss/pages/about-us/_about-us_media.scss
+++ b/scss/pages/about-us/_about-us_media.scss
@@ -99,10 +99,8 @@
 }
 
 @media only screen and (max-width : 767px){
-    .container{
-        padding-left: 0;
-        padding-right: 0;
-        width: 315px;
+    .main-header--white::before{
+        background: rgba(245,245,250,1);
     }
     .main-header{
         &__logo-svg-slash{
@@ -113,9 +111,6 @@
             font-size: 20px;
             line-height: 24px;
         }
-        &::before{
-            background: rgba(245,245,250, 1);
-        }
     }
     .legal-services{
         &__title{
@@ -123,11 +118,16 @@
             line-height: 36px;
         }
     }
+    .quality{
+        &__title{
+            font-size: 30px;
+            line-height: 36px; 
+        }
+    }
     .achievements{
         &__title{
             width: 100%;
         }
-
         .swiper--about-us{
             display: none;
         }
@@ -139,8 +139,8 @@
                 transform: translateX(10px);
             }
             .achievements__item{
-                width: 255px;
-                height: 90px;
+                width: 100%;
+                height: auto;
                 @include center-block;
                 border-radius: 12px;
             }
