--- a/scss/pages/contact/_contact_contacts-and-form.scss
+++ b/scss/pages/contact/_contact_contacts-and-form.scss
@@ -64,6 +64,13 @@
         border-radius: 8px;
         @include fonts(16px, 26px, 400, $text, false);
     }
+    &__name:focus, &__message:focus, &__phone:focus, &__email:focus{
+        outline: none;
+        border: 1px solid $active-regular;
+    }
+    &__name:invalid, &__message:invalid, &__phone:invalid, &__email:invalid{
+        border: 1px solid #FF0000;
+    }
     &__name{
         margin-bottom: 15px;
     }
@@ -89,5 +96,11 @@
     }
     &__submit{
         width: 100%;
+    }
+    &__submit:hover{
+        background-color: $active-hover;
+    }
+    &__submit:active{
+        background-color: $active-active;
     }
 }
