--- a/scss/pages/contact/_contact_media.scss
+++ b/scss/pages/contact/_contact_media.scss
@@ -34,6 +34,9 @@
 }
 @media only screen and (max-width : 767px){
     .contacts-and-form{
+        &__container{
+            padding: 0 30px;
+        }
         padding-bottom: 30px;
     }
     .contacts-page{
