--- a/scss/pages/publications-inner/_publications-inner_media.scss
+++ b/scss/pages/publications-inner/_publications-inner_media.scss
@@ -28,7 +28,8 @@
 @media only screen and (max-width : 767px){
     .article{
         &__container{
-            width: 315px;
+            width: 100%;
+            padding: 0 30px;     
         }
         &__attention{
             font-size: 30px;
