--- a/scss/pages/team/_team_media.scss
+++ b/scss/pages/team/_team_media.scss
@@ -46,6 +46,10 @@
 }
 @media only screen and (max-width : 767px){
     .team{
+        &__container{
+            width: 100%;
+            padding: 0 15px;   
+        }
         &__title{
             font-size: 30px;
             line-height: 36px;
@@ -55,7 +59,7 @@
             flex-direction: row;
         }
         .teammate{
-            width: 315px;
+            width: 100%;
         }
         &__teammate:nth-child(n){
             margin-bottom: 30px;
