--- a/scss/pages/main/_main_swiper.scss
+++ b/scss/pages/main/_main_swiper.scss
@@ -8,6 +8,7 @@
         display: flex;
         &__image{
             display: block;
+            height: 100%;
         }
         &__image-block{
             flex-basis: 400px;
